feat: reset commit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <p> <span>Lorem ipsum dolor sit amet </span> consectetur adipisicing elit. <strong> ab sunt dolores?
         </strong>Excepturi dolores
         dolore adipisci
-        voluptatem nisi iusto,<i> alias ducimus laudantium facere consequatur</i> provident cum, unde ad sequi
+        voluptatem nisi iusto,<i> alias ducimus <a href="#">laudantium facere consequatur</a> </i> provident cum, unde
+        ad sequi
         veritatis?</p>
     <img src="joao.png" alt="Ocorreu um erro">
     <br>
@@ -34,12 +35,77 @@
     </ol>
     <br>
     <ul>
-        <li>matuta Jorge</li>
+        <li><a href="#">matuta Jorge</a> </li>
         <li>José Mendes</li>
         <li>Lineth Dinis</li>
         <li>Carvalho</li>
         <li>antónio Faustudo</li>
     </ul>
+    <br>
+    <table border="1px">
+        <tr>
+            <td> Primeira Coluna</td>
+            <td> Segunda Coluna</td>
+
+            <td> Primeira Coluna</td>
+            <td> Segunda Coluna</td>
+        </tr>
+        <tr>
+            <td> Primeira Coluna da Segunda Linha</td>
+            <td> Segunda Coluna da segunda linha</td>
+
+            <td> Primeira Coluna da Segunda Linha</td>
+            <td> Segunda Coluna da segunda linha</td>
+        </tr>
+    </table>
+    <br>
+
+    <a href="Semantica.html"> Acesse o nosso site</a>
+    <br>
+    <br>
+    <br>
+
+    <div>
+
+        <form action="#">
+            <label for="name">
+                Nome Completo:
+            </label>
+            <input type="text" name="name" id="name" placeholder="Digite o seu nome" />
+            <br>
+            <label for="email">
+                E-mail:
+            </label>
+            <input type="email" name="name" id="email" placeholder="Digite o seu email" />
+            <br>
+            <label for="lingua">
+                Português:
+            </label>
+            <input type="checkbox" name="name" id="lingua" />
+            <br>
+            <label for="lingua-ingles">
+                Inglês:
+            </label>
+            <input type="checkbox" name="name" id="lingua-ingles" />
+            <br>
+            <label for="lingua-frances">
+                Francês:
+            </label>
+            <input type="checkbox" name="name" id="lingua-frances" />
+            <br>
+            <label for="file">
+                ficheiro:
+            </label>
+            <input type="file" name="name" id="file" />
+            <br>
+            <label for="data">
+                Data:
+            </label>
+            <input type="date" name="name" id="data" />
+
+            <button type="submit"> Login</button>
+        </form>
+    </div>
 </body>
 
 </html>
