--- a/Semantica.html
+++ b/Semantica.html
@@ -5,31 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semantica Html</title>
+    <link rel="stylesheet" href="style.css">
 
-    <style>
-        #navegacao {
-            background-color: rgb(139, 87, 189);
-            margin-bottom: 20px;
-
-        }
-
-        #menu {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-around;
-        }
-
-        ul {
-            display: flex;
-        }
-
-        li {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-around;
-            margin: 5px;
-        }
-    </style>
 </head>
 
 <body>
@@ -38,22 +15,25 @@
             <img width="200px" height="50px" src="logofD.png" alt=" Ocorreu um erro com a imagem">
 
             <ul>
-                <li> Menu</li>
+                <li>Menu</li>
                 <li>sobre</li>
                 <li>Login</li>
                 <li><a href="index.html">Página inicial</a></li>
             </ul>
         </nav>
+
     </header>
 
-    <section>
-        <img src="dito.jpg" alt="Ocorreu um erro com a imagem" width="900px" height="400px">
-        <div>
-            <label for="#"> Esta é a nossa Imagem</label>
-            <p>Muito massa estamos a ir muito bem, e estamos a adorar</p>
-        </div>
-    </section>
 
+    <main>
+        <section>
+            <img src="dito.jpg" alt="Ocorreu um erro com a imagem" width="900px" height="400px">
+            <div>
+                <label for="#"> Esta é a nossa Imagem</label>
+                <p>Muito massa estamos a ir muito bem, e estamos a adorar</p>
+            </div>
+        </section>
+    </main>
     <footer>
         <div>
 
