feat: create components in sections

--- a/Semantica.html
+++ b/Semantica.html
@@ -26,14 +26,37 @@
 
 
     <main>
-        <section>
-            <img src="dito.jpg" alt="Ocorreu um erro com a imagem" width="900px" height="400px">
-            <div>
-                <label for="#"> Esta é a nossa Imagem</label>
-                <p>Muito massa estamos a ir muito bem, e estamos a adorar</p>
+        <div id="text-center">
+            <h1>Bem-Vindo a Future Dev</h1>
+            <p>A Future Dev tem uma proposta para os que se encontram no mundo da programação e a os que querem
+                entrar, <br>
+                a intensão é criar Programadores e futuros hackers</p>
+        </div>
+
+        <section id="section-about">
+            <h2>Quem Somos</h2>
+            <div id="descrition">
+                <div>
+                    <img src="dito.jpg" alt="mahsgnbgs">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Dolor delectus dicta recusandae, perferendis exercitationem
+                        laborum sunt esse non quibusdam
+                        eum praesentium consequuntur iusto officia ut officiis sapiente!
+                        Maxime, cum qui?</p>
+                </div>
+                <div>
+                    <img src="dito.jpg" alt="sghshgk">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Dolor delectus dicta recusandae, perferendis exercitationem
+                        laborum sunt esse non quibusdam
+                        eum praesentium consequuntur iusto officia ut officiis sapiente!
+                        Maxime, cum qui?</p>
+                </div>
             </div>
+
         </section>
     </main>
+
     <footer>
         <div>
 
