feat: add contact

--- a/Semantica.html
+++ b/Semantica.html
@@ -55,6 +55,26 @@
             </div>
 
         </section>
+
+        <section id="contact">
+            <h1>Entre Em contacto</h1>
+            <div id="contact-main">
+                <div>
+                    <h3>Fale connosco</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur Lorem ipsum
+                        dolor
+                        sit amet consectetur Lorem ipsum dolor sit amet consectetur</p>
+                </div>
+                <div>
+                    <form action="#" id="form-contact">
+                        <input type="name" id="input-name" placeholder="digite o seu nome">
+                        <input type="text" name="#" id="input-text" placeholder="Em que podemos ajudar">
+
+                        <button id="button-contact">Enviar</button>
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
