feat: create pupil component and testement component

--- a/Semantica.html
+++ b/Semantica.html
@@ -37,7 +37,7 @@
             <h2>Quem Somos</h2>
             <div id="descrition">
                 <div>
-                    <img src="dito.jpg" alt="mahsgnbgs">
+                    <img src="quem-somos.svg" alt="quem-somos">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                         Dolor delectus dicta recusandae, perferendis exercitationem
                         laborum sunt esse non quibusdam
@@ -45,7 +45,7 @@
                         Maxime, cum qui?</p>
                 </div>
                 <div>
-                    <img src="dito.jpg" alt="sghshgk">
+                    <img src="nosso-objetivo.svg" alt="sghshgk">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                         Dolor delectus dicta recusandae, perferendis exercitationem
                         laborum sunt esse non quibusdam
@@ -74,6 +74,65 @@
                     </form>
                 </div>
             </div>
+        </section>
+        <section id="content-pupil">
+            <h1>Alunos</h1>
+            <article>
+                <div id="content">
+                    <div>
+                        <img src="alun4.svg" alt="mana">
+                        <h3>Lineth Dinis</h3>
+                    </div>
+                    <div>
+                        <img src="aluno1.svg" alt="mana">
+                        <h3>Maria Caenga</h3>
+                    </div>
+                </div>
+
+                <div id="content">
+                    <div>
+                        <img src="aluno2.svg" alt="mana">
+                        <h3>Conceição Pedro</h3>
+                    </div>
+                    <div>
+                        <img src="aluno3.svg" alt="mana">
+                        <h3>Maria da Graça</h3>
+                    </div>
+                </div>
+            </article>
+        </section>
+
+        <section id="content-problem">
+            <h1>Testemunho</h1>
+            <article id="content-problem-article">
+                <div id="content-problem-image">
+                    <img src="ilustrator.svg" alt="dito">
+                </div>
+                <div id="content-problem-description">
+                    <div id="problem-description">
+                        <img src="perfil1.svg" alt=" check">
+                        <div>
+                            <label for="#"> João Bonito</label>
+                            <p>Estou a gostar muito do vosso sistema</p>
+                        </div>
+                    </div>
+                    <div id="problem-description">
+                        <img src="perfil2.svg" alt=" check">
+                        <div>
+                            <label for="#"> João Bonito</label>
+                            <p>Estou a gostar muito do vosso sistema</p>
+
+                        </div>
+                    </div>
+                    <div id="problem-description">
+                        <img src="perfil3.svg" alt=" check">
+                        <div>
+                            <label for="#"> João Bonito</label>
+                            <p>Estou a gostar muito do vosso sistema</p>
+
+                        </div>
+                    </div>
+            </article>
         </section>
     </main>
 
