--- a/index.html
+++ b/index.html
@@ -4,108 +4,156 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nova aula de Html</title>
+    <title>Semantica Html</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-    <h1>Matuta Jorge</h1>
-    <h2>Carvalho</h2>
-    <h3>Lineth Dinis</h3>
-    <h4>José Tchipilica</h4>
-    <h5>António Faustudo</h5>
-    <p> <span>Lorem ipsum dolor sit amet </span> consectetur adipisicing elit. <strong> ab sunt dolores?
-        </strong>Excepturi dolores
-        dolore adipisci
-        voluptatem nisi iusto,<i> alias ducimus <a href="#">laudantium facere consequatur</a> </i> provident cum, unde
-        ad sequi
-        veritatis?</p>
-    <img src="joao.png" alt="Ocorreu um erro">
-    <br>
-    <video width="200px" height="200px" src="Aula 2_ Construindo o Back-end com Node.js _ Full Stack Week.mp4"
-        controls></video>
-    <audio src="pri.3gpp"></audio>
+    <header id="navegacao">
+        <nav id="menu">
+            <img width="200px" height="50px" src="/assets/logofD.png" alt=" Ocorreu um erro com a imagem">
+
+            <ul>
+                <li>Menu</li>
+                <li>sobre</li>
+                <li>Login</li>
+                <li><a href="index.html">Página inicial</a></li>
+            </ul>
+        </nav>
+
+    </header>
 
 
-    <ol type="A">
-        <li>matuta Jorge</li>
-        <li>José Mendes</li>
-        <li>Lineth Dinis</li>
-        <li>Carvalho</li>
-        <li>antónio Faustudo</li>
-    </ol>
-    <br>
-    <ul>
-        <li><a href="#">matuta Jorge</a> </li>
-        <li>José Mendes</li>
-        <li>Lineth Dinis</li>
-        <li>Carvalho</li>
-        <li>antónio Faustudo</li>
-    </ul>
-    <br>
-    <table border="1px">
-        <tr>
-            <td> Primeira Coluna</td>
-            <td> Segunda Coluna</td>
+    <main>
+        <div id="text-center">
+            <h1>Bem-Vindo a Future Dev</h1>
+            <p>A Future Dev tem uma proposta para os que se encontram no mundo da programação e a os que querem
+                entrar, <br>
+                a intensão é criar Programadores e futuros hackers</p>
+        </div>
 
-            <td> Primeira Coluna</td>
-            <td> Segunda Coluna</td>
-        </tr>
-        <tr>
-            <td> Primeira Coluna da Segunda Linha</td>
-            <td> Segunda Coluna da segunda linha</td>
+        <section id="section-about">
+            <h2>Quem Somos</h2>
+            <div id="descrition">
+                <div>
+                    <img src="/assets/quem-somos.svg" alt="quem-somos">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Dolor delectus dicta recusandae, perferendis exercitationem
+                        laborum sunt esse non quibusdam
+                        eum praesentium consequuntur iusto officia ut officiis sapiente!
+                        Maxime, cum qui?</p>
+                </div>
+                <div>
+                    <img src="/assets/nosso-objetivo.svg" alt="sghshgk">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Dolor delectus dicta recusandae, perferendis exercitationem
+                        laborum sunt esse non quibusdam
+                        eum praesentium consequuntur iusto officia ut officiis sapiente!
+                        Maxime, cum qui?</p>
+                </div>
+            </div>
 
-            <td> Primeira Coluna da Segunda Linha</td>
-            <td> Segunda Coluna da segunda linha</td>
-        </tr>
-    </table>
-    <br>
+        </section>
 
-    <a href="Semantica.html"> Acesse o nosso site</a>
-    <br>
-    <br>
-    <br>
+        <section id="contact">
+            <h1>Entre Em contacto</h1>
+            <div id="contact-main">
+                <div>
+                    <h3>Fale connosco</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur Lorem ipsum
+                        dolor
+                        sit amet consectetur Lorem ipsum dolor sit amet consectetur</p>
+                </div>
+                <div>
+                    <form action="#" id="form-contact">
+                        <input type="name" id="input-name" placeholder="digite o seu nome">
+                        <input type="text" name="#" id="input-text" placeholder="Em que podemos ajudar">
 
-    <div>
+                        <button id="button-contact">Enviar</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <section id="content-pupil">
+            <h1>Alunos</h1>
+            <article>
+                <div id="content">
+                    <div>
+                        <img src="/assets/alun4.svg" alt="mana">
+                        <h3>Lineth Dinis</h3>
+                    </div>
+                    <div>
+                        <img src="/assets/aluno1.svg" alt="mana">
+                        <h3>Maria Caenga</h3>
+                    </div>
+                </div>
 
-        <form action="#">
-            <label for="name">
-                Nome Completo:
-            </label>
-            <input type="text" name="name" id="name" placeholder="Digite o seu nome" />
-            <br>
-            <label for="email">
-                E-mail:
-            </label>
-            <input type="email" name="name" id="email" placeholder="Digite o seu email" />
-            <br>
-            <label for="lingua">
-                Português:
-            </label>
-            <input type="checkbox" name="name" id="lingua" />
-            <br>
-            <label for="lingua-ingles">
-                Inglês:
-            </label>
-            <input type="checkbox" name="name" id="lingua-ingles" />
-            <br>
-            <label for="lingua-frances">
-                Francês:
-            </label>
-            <input type="checkbox" name="name" id="lingua-frances" />
-            <br>
-            <label for="file">
-                ficheiro:
-            </label>
-            <input type="file" name="name" id="file" />
-            <br>
-            <label for="data">
-                Data:
-            </label>
-            <input type="date" name="name" id="data" />
+                <div id="content">
+                    <div>
+                        <img src="/assets/aluno2.svg" alt="mana">
+                        <h3>Conceição Pedro</h3>
+                    </div>
+                    <div>
+                        <img src="/assets/aluno3.svg" alt="mana">
+                        <h3>Maria da Graça</h3>
+                    </div>
+                </div>
+            </article>
+        </section>
 
-            <button type="submit"> Login</button>
-        </form>
-    </div>
+        <section id="content-problem">
+            <h1>Testemunho</h1>
+            <article id="content-problem-article">
+                <div id="content-problem-image">
+                    <img src="/assets/ilustrator.svg" alt="dito">
+                </div>
+                <div id="content-problem-description">
+                    <div id="problem-description">
+                        <img src="/assets/perfil1.svg" alt=" check">
+                        <div>
+                            <label for="#"> João Bonito</label>
+                            <p>Estou a gostar muito do vosso sistema</p>
+                        </div>
+                    </div>
+                    <div id="problem-description">
+                        <img src="/assets/perfil2.svg" alt=" check">
+                        <div>
+                            <label for="#"> João Bonito</label>
+                            <p>Estou a gostar muito do vosso sistema</p>
+
+                        </div>
+                    </div>
+                    <div id="problem-description">
+                        <img src="/assets/perfil3.svg" alt=" check">
+                        <div>
+                            <label for="#"> João Bonito</label>
+                            <p>Estou a gostar muito do vosso sistema</p>
+
+                        </div>
+                    </div>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <div>
+
+            <div>
+                <label for="#"> contacto</label>
+                <p>9xxxxx-xx-x</p>
+                <p>99xxx-xx-xx-x</p>
+                <p>emaiafndf@gmail.com</p>
+            </div>
+            <div>
+                <label for="#"> Redes Sociais</label>
+                <p>facebook.com</p>
+                <p>Instagram</p>
+                <p>whatsapp</p>
+
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
